@@ -30,7 +30,7 @@ using namespace Pandora;
 using namespace Pandora_Strutils;
 
 #define PATH_SIZE    _MAX_PATH+1
-#define PANDORA_VERSION ("3.1RC1(Build 100421)")
+#define PANDORA_VERSION ("3.1RC1(Build 100519)")
 
 string pandora_path;
 string pandora_dir;
