@@ -24,6 +24,7 @@
 
 #define MAX_PACKET_SIZE	1024
 
+#include <algorithm>
 #include "../pandora_windows_service.h"
 
 namespace Pandora {
